@@ -195,7 +195,7 @@
     <dependency>
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
-      <version>2.2</version>
+      <version>2.3</version>
     </dependency>
 
     <dependency>
@@ -207,7 +207,7 @@
     <dependency>
      <groupId>commons-digester</groupId>
       <artifactId>commons-digester</artifactId>
-      <version>1.7</version>
+      <version>1.8</version>
     </dependency>
 
     <dependency>
