@@ -238,7 +238,7 @@
     <dependency>
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
-      <version>2.2</version>
+      <version>2.3</version>
       <properties>
         <war.bundle>true</war.bundle>
       </properties>
@@ -256,7 +256,7 @@
     <dependency>
      <groupId>commons-digester</groupId>
       <artifactId>commons-digester</artifactId>
-      <version>1.7</version>
+      <version>1.8</version>
       <properties>
         <war.bundle>true</war.bundle>
       </properties>
